# GiadogROS

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  package.xml  run.sh
launch/: gait_node.launch  imu_test.launch  joystick_node.launch  servo_test_node.launch  servo_translate_node.launch
msg/: Servo.msg  ServoArray.msg
src/: RobotConfig.hpp  gait.cpp  imu_test.cpp  joystick.cpp  kinematicsNode.cpp  servo_test.cpp  servo_translate.cpp
src/kinematics/: FPH.hpp  Gait.hpp  InvKinematics.hpp  kinematicsPipeline.hpp
src/utils/: clip.hpp  config.hpp  config.yml  quaternion2euler.hpp  translate.hpp
